# object-oriented-programming-lab6

./: CMakeLists.txt  NPC.cpp  NPC.h  README.md  main.cpp  test_npc.cpp
include/: NPC.h  NPCFactory.h  Observer.h  Visitor.h
src/: NPCFactory.cpp  Observer.cpp  Visitor.cpp
